--- a/src/components/LoginField/LoginField.css
+++ b/src/components/LoginField/LoginField.css
@@ -13,9 +13,11 @@
 }
 
 .login-block button {
-  width: 100%;
+  width: 80%;
   padding: 10px;
+  margin-left: 13%;
   margin-top: 10px;
   font-weight: bold;
   cursor: pointer;
+  background-color: rgba(219, 255, 255, 0.3);
 }
